Project

General

Profile

Actions

Bug #37394

closed

mds: PurgeQueue write error handler does not handle EBLACKLISTED

Added by Patrick Donnelly over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Urgent
Category:
-
Target version:
% Done:

0%

Source:
other
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
crash
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

It should have similar logic to MDSRank::handle_write_error.

As a result, if the PQ sees a write error due to being blacklisted, the MDS rank will go damaged and will need manually recovered.


Related issues 3 (0 open3 closed)

Related to CephFS - Bug #37543: mds: purge queue recovery hangs during boot if PQ journal is damagedResolvedPatrick Donnelly

Actions
Copied to CephFS - Backport #37604: luminous: mds: PurgeQueue write error handler does not handle EBLACKLISTEDResolvedNathan CutlerActions
Copied to CephFS - Backport #37605: mimic: mds: PurgeQueue write error handler does not handle EBLACKLISTEDResolvedNathan CutlerActions
Actions #1

Updated by Patrick Donnelly over 5 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 25270
Actions #2

Updated by Patrick Donnelly over 5 years ago

  • Related to Bug #37543: mds: purge queue recovery hangs during boot if PQ journal is damaged added
Actions #3

Updated by Patrick Donnelly over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37604: luminous: mds: PurgeQueue write error handler does not handle EBLACKLISTED added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37605: mimic: mds: PurgeQueue write error handler does not handle EBLACKLISTED added
Actions #6

Updated by Patrick Donnelly about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF