mds: use uniform write handler for PQ

MDS would go damaged after blacklisting the MDS caused the PQ to see a write
error. Instead, just respawn and/or do usual write error handling (default
r/o).

Fixes: https://tracker.ceph.com/issues/37394

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>